--- a/scss/o_nas.scss
+++ b/scss/o_nas.scss
@@ -168,6 +168,7 @@ $text_hover_dark: #f36259;
     border-radius: 50%;
 }
 .contactLink {
+    position: absolute;
     width: 300px;
     height: 110px;
     background-color: #f36259;
