--- a/scss/o_nas.scss
+++ b/scss/o_nas.scss
@@ -161,20 +161,20 @@ $text_hover_dark: #f36259;
     justify-content: center;
     align-items: center;
 }
-.icon {
+.icon, .icon1{
     width: 110px;
     height: 110px;
     background-color: aqua;
     border-radius: 50%;
-    &:hover ~ .contactLink{
-        width: 300px;
-    }
 }
-.contactLink {
+.contactLink, .contactLink1 {
     width: 200px;
     height: 110px;
     background-color: #f36259;
     transition: all 0.3s;
+}
+.active_contactLink {
+    width: 300px;
 }
 .span {
     display: block;
