--- a/scss/o_nas.scss
+++ b/scss/o_nas.scss
@@ -161,13 +161,13 @@ $text_hover_dark: #f36259;
     justify-content: center;
     align-items: center;
 }
-.icon, .icon1{
+.icon{
     width: 110px;
     height: 110px;
     background-color: aqua;
     border-radius: 50%;
 }
-.contactLink, .contactLink1 {
+.contactLink {
     width: 200px;
     height: 110px;
     background-color: #f36259;
