--- a/css/o_nas.css
+++ b/css/o_nas.css
@@ -150,19 +150,30 @@
   height: 120px;
   background-color: rgba(0, 0, 0, 0.377);
   display: flex;
-  justify-content: center;
   align-items: center;
+}
+
+.text {
+  width: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
 }
 
 .icon {
   width: 110px;
   height: 110px;
+  margin-left: 50px;
   background-color: aqua;
   border-radius: 50%;
+  transition: all 0.3s;
+  z-index: 2;
 }
 
 .contactLink {
-  width: 200px;
+  z-index: 1;
+  width: 0px;
   height: 110px;
   background-color: #f36259;
   transition: all 0.3s;
@@ -170,6 +181,10 @@
 
 .active_contactLink {
   width: 300px;
+}
+
+.active_icon {
+  margin-left: 0px;
 }
 
 .span {
