--- a/css/o_nas.css
+++ b/css/o_nas.css
@@ -166,7 +166,7 @@
   width: 110px;
   height: 110px;
   margin-left: 50px;
-  background-color: aqua;
+  background-color: #283141;
   border-radius: 50%;
   transition: all 0.3s;
   z-index: 2;
