--- a/scss/o_nas.scss
+++ b/scss/o_nas.scss
@@ -172,7 +172,7 @@ $text_hover_dark: #f36259;
     width: 110px;
     height: 110px;
     margin-left: 50px;
-    background-color: aqua;
+    background-color: $dark_second ;
     border-radius: 50%;
     transition: all 0.3s;
     z-index: 2;
