--- a/scss/main.scss
+++ b/scss/main.scss
@@ -195,6 +195,7 @@ a {
         height: 30px;
         text-decoration: none;
         font-size: 13px;
+        font-weight: bold;
     }
     .hamburger_menu {
         display: flex;
@@ -289,6 +290,7 @@ a {
         padding: 20px;
         height: 30px;
         text-decoration: none;
+        font-weight: bold;
     }
     .hamburger_menu {
         display: flex;
