--- a/css/main.css
+++ b/css/main.css
@@ -200,6 +200,7 @@ a:hover {
     height: 30px;
     text-decoration: none;
     font-size: 13px;
+    font-weight: bold;
   }
   .hamburger_menu {
     display: flex;
@@ -294,6 +295,7 @@ a:hover {
     padding: 20px;
     height: 30px;
     text-decoration: none;
+    font-weight: bold;
   }
   .hamburger_menu {
     display: flex;
