--- a/scss/o_nas.scss
+++ b/scss/o_nas.scss
@@ -179,19 +179,32 @@ $text_hover_dark: #f36259;
     display: flex;
     justify-content: center;
     align-items: center;
+    position: absolute;
+    margin-left: 200px;
 }
 .contactLink {
     z-index: 1;
     width: 0px;
     height: 110px;
-    background-color: #f36259;
+    border-radius: 0px 55px 55px 0px;
+    background-color: $white_l;
     transition: all 0.3s;
+    margin-left: 100px;
+    opacity: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    a {
+        font-size: 20px;
+    }
 }
 .active_contactLink {
     width: 300px;
+    margin-left: 50px;
+    opacity: 1;
 }
 .active_icon {
-    margin-left: 0px;
+    margin-left: 150px;
 }
 .span {
     display: block;
