--- a/scss/o_nas.scss
+++ b/scss/o_nas.scss
@@ -218,11 +218,15 @@ $text_hover_dark: #f36259;
     height: 30px;
     padding: 10px;
     border-radius: 30px;
-    background-color: aqua;
+    background-color: $text_secondary_light;
+    color: $white_l;
     position: absolute;
     margin-left: 400px;
     margin-bottom: 50px;
     z-index: 5;
+}
+.active-notification {
+    opacity: 0.5;
 }
 .span {
     display: block;
