--- a/css/o_nas.css
+++ b/css/o_nas.css
@@ -12,6 +12,22 @@
 .dark-mode .span {
   background-color: #283141;
 }
+.dark-mode .contact {
+  background-color: #283141;
+}
+.dark-mode .text {
+  color: #e2e8f0;
+}
+.dark-mode .icon {
+  background-color: #4a5568;
+}
+.dark-mode .contactLink {
+  background-color: #4a5568;
+}
+.dark-mode .notification {
+  background-color: #e2e8f0;
+  color: #4a5568;
+}
 
 .blur {
   width: 100%;
