--- a/scss/o_nas.scss
+++ b/scss/o_nas.scss
@@ -25,6 +25,22 @@ $text_hover_dark: #f36259;
     .span {
         background-color: $dark_second;
     }
+    .contact {
+        background-color: $dark_second;
+    }
+    .text {
+        color: $text_secondary_dark;
+    }
+    .icon {
+        background-color: $text_secondary_light;
+    }
+    .contactLink {
+        background-color: $text_secondary_light;
+    }
+    .notification {
+        background-color: $text_secondary_dark;
+        color: $text_secondary_light;
+    }
 }
 .blur {
     width: 100%;
