--- a/css/o_nas.css
+++ b/css/o_nas.css
@@ -331,6 +331,24 @@
   .content::-webkit-scrollbar {
     width: 0.5em;
   }
+  .contact {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .text {
+    width: 0px;
+    font-size: 0px;
+    opacity: 0;
+  }
+  .icon {
+    margin-left: 0px;
+  }
+  .active_contactLink {
+    width: 200px;
+    height: 150px;
+    margin-left: 0px;
+  }
 }
 @media only screen and (min-width: 600px) and (max-width: 768px) {
   .container_cards {
