--- a/css/o_nas.css
+++ b/css/o_nas.css
@@ -342,12 +342,47 @@
     opacity: 0;
   }
   .icon {
+    width: 90px;
+    height: 90px;
     margin-left: 0px;
   }
+  .icon svg {
+    width: 70px;
+    height: 70px;
+  }
+  .active_icon {
+    margin-bottom: 50px;
+  }
+  .contactLink {
+    width: 0px;
+    height: 0px;
+  }
   .active_contactLink {
+    border-radius: 50px;
     width: 200px;
-    height: 150px;
+    height: 50px;
     margin-left: 0px;
+    margin-top: 80px;
+    text-align: center;
+  }
+  .active_contactLink a {
+    font-size: 15px;
+  }
+  .notification {
+    width: 0px;
+    height: 0px;
+    font-size: 0px;
+    padding: 0;
+    margin-left: 0px;
+    opacity: 0;
+  }
+  .active-notification {
+    height: 30px;
+    width: auto;
+    font-size: 15px;
+    padding: 10px;
+    opacity: 1;
+    margin-bottom: 50px;
   }
 }
 @media only screen and (min-width: 600px) and (max-width: 768px) {
