--- a/css/o_nas.css
+++ b/css/o_nas.css
@@ -335,6 +335,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    height: 100px;
+    margin-bottom: 20px;
   }
   .text {
     width: 0px;
@@ -356,6 +358,7 @@
   .contactLink {
     width: 0px;
     height: 0px;
+    margin-left: 0px;
   }
   .active_contactLink {
     border-radius: 50px;
@@ -417,5 +420,37 @@
   }
   .content::-webkit-scrollbar {
     width: 0.5em;
+  }
+  .contact {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 35px;
+  }
+  .text {
+    font-size: 0px;
+    height: 0px;
+    width: 0px;
+    opacity: 0;
+  }
+  .icon {
+    margin-left: 0px;
+  }
+  .active_icon {
+    margin-bottom: 70px;
+  }
+  .contactLink {
+    text-align: center;
+    margin-left: 0px;
+    height: 70px;
+    border-radius: 70px;
+  }
+  .active_contactLink {
+    margin-left: 0px;
+    margin-top: 90px;
+  }
+  .notification {
+    margin-left: 250px;
+    margin-top: 50px;
   }
 }/*# sourceMappingURL=o_nas.css.map */
